refactor: add prePage and nextPage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>分页测试</title>
-  <link rel="stylesheet" href="../style/test.css">
+  <link rel="stylesheet" href="./style/test.css">
 </head>
 <body>
   <div id="content">
@@ -130,13 +130,16 @@
       hello world hello world hello world
     </p>
   </div>
-  <script src="../libs/jquery-3.3.1.min.js"></script>
-  <script src="../js/pagination.js"></script>
+  <script src="./libs/jquery-3.3.1.min.js"></script>
+  <script src="./js/pagination.js"></script>
   <script>
     $(function() {
       var height = parseInt(window.screen.height);
       var width = parseInt(window.screen.width);
-      $('#content').Pagination({width: width, height: height, fadeSpeed: 400});
+      $('#content').Pagination({
+        width: width,
+        height: height,
+      });
     });
   </script>
 </body>
